# Stu_Info_Manager

./: CMakeLists.txt  main.c  main.h  version_log.txt
include/information/: stu_info.h  stu_info_basic.h  stu_info_epid.h  system_info.h  user_info.h
include/login/: login_main.h
include/student/: stu_basic.h  stu_epidemic.h  stu_main.h
include/system/: system_buf.h  system_main.h  system_utils.h
include/tools/: printop.h  serialize_stu.h  stringop.h
information/: stu_info.c
login/: login_main.c
student/: stu_basic.c  stu_epidemic.c  stu_main.c
system/: system_buf.c  system_main.c  system_utils.c
tools/: printop.c  serialize_stu.c  stringop.c
